<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/action_settings">

    <Preference
        android:fragment="com.garado.aegis.ui.fragments.preferences.AppearancePreferencesFragment"
        app:title="@string/pref_section_appearance_title"
        app:summary="@string/pref_section_appearance_summary" />

    <Preference
        android:fragment="com.garado.aegis.ui.fragments.preferences.BehaviorPreferencesFragment"
        app:title="@string/pref_section_behavior_title"
        app:summary="@string/pref_section_behavior_summary" />

    <Preference
        android:fragment="com.garado.aegis.ui.fragments.preferences.IconPacksManagerFragment"
        android:title="@string/pref_section_icon_packs"
        android:summary="@string/pref_section_icon_packs_summary" />

    <Preference
        android:fragment="com.garado.aegis.ui.fragments.preferences.SecurityPreferencesFragment"
        app:title="@string/pref_section_security_title"
        app:summary="@string/pref_section_security_summary" />

    <Preference
        android:fragment="com.garado.aegis.ui.fragments.preferences.BackupsPreferencesFragment"
        app:title="@string/pref_section_backups_title"
        app:summary="@string/pref_section_backups_summary" />

    <Preference
        android:fragment="com.garado.aegis.ui.fragments.preferences.ImportExportPreferencesFragment"
        app:title="@string/pref_section_import_export_title"
        app:summary="@string/pref_section_import_export_summary" />

    <Preference
        android:fragment="com.garado.aegis.ui.fragments.preferences.AuditLogPreferencesFragment"
        app:title="@string/pref_section_audit_log_title"
        app:summary="@string/pref_section_audit_log_summary" />

    <Preference
        android:key="pref_about"
        android:title="@string/action_about" />

</androidx.preference.PreferenceScreen>
