<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="28dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.garado.aegis.ui.components.light.LightText
            android:id="@+id/pref_backups_warning_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/backup_warning_password" />

        <com.garado.aegis.ui.components.light.LightToggleSwitch
            android:id="@+id/pref_backups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:lightValue="@string/pref_backups_title" />

        <com.garado.aegis.ui.components.light.LightToggleSwitch
            android:id="@+id/pref_backup_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:lightValue="@string/pref_backups_reminder_title" />

        <com.garado.aegis.ui.components.light.LightSelectorButton
            android:id="@+id/pref_versioning_strategy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:lightLabel="@string/pref_backups_versioning_strategy_title" />

        <com.garado.aegis.ui.components.light.LightSelectorButton
            android:id="@+id/pref_backups_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:lightLabel="@string/pref_backups_location_title" />

        <com.garado.aegis.ui.components.light.LightButton
            android:id="@+id/pref_backups_trigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/pref_backups_trigger_title" />

        <com.garado.aegis.ui.components.light.LightSelectorButton
            android:id="@+id/pref_backups_versions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:lightLabel="@string/pref_backups_versions_title" />

        <com.garado.aegis.ui.components.light.LightSelectorButton
            android:id="@+id/pref_status_backup_builtin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:lightLabel="@string/pref_cat_backups_auto" />

        <com.garado.aegis.ui.components.light.LightToggleSwitch
            android:id="@+id/pref_android_backups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:lightValue="@string/pref_android_backups_title" />

        <com.garado.aegis.ui.components.light.LightSelectorButton
            android:id="@+id/pref_status_backup_android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:lightLabel="@string/pref_cat_backups_android" />

    </LinearLayout>

</ScrollView>
