<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.garado.aegis.ui.components.light.LightText
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authentication_method_explanation"/>

            <com.garado.aegis.ui.components.light.LightOptionGroup
                android:id="@+id/rg_authenticationMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <com.garado.aegis.ui.components.light.LightToggleSwitch
                    android:id="@+id/rb_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:lightValue="@string/authentication_method_none"
                    app:lightLabel="@string/authentication_method_none_description" />

                <com.garado.aegis.ui.components.light.LightToggleSwitch
                    android:id="@+id/rb_password"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    app:lightValue="@string/authentication_method_password"
                    app:lightLabel="@string/authentication_method_password_description" />

                <com.garado.aegis.ui.components.light.LightToggleSwitch
                    android:id="@+id/rb_biometrics"
                    android:layout_marginTop="12dp"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lightValue="@string/authentication_method_biometrics"
                    app:lightLabel="@string/authentication_method_biometrics_description" />

            </com.garado.aegis.ui.components.light.LightOptionGroup>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
